reorganize code files and add comments

--- a/Azira/get-urls/scp_urls.txt.ipynb
+++ b/Azira/get-urls/scp_urls.txt.ipynb
@@ -178,6 +178,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e3d0a70e",
+   "metadata": {},
+   "source": [
+    "## 2. Write urls.txt"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 25,
    "id": "5676b7b9",
@@ -189,6 +197,14 @@
     "    for item in all_links:\n",
     "        url = item[3]\n",
     "        f.write(f\"{url}\\n\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ff0d15b3",
+   "metadata": {},
+   "source": [
+    "## 3. Tranfser urls.txt to hellgate (scp)"
    ]
   },
   {
