--- a/Azira/submit-jsons/azira_submit_jobs.ipynb
+++ b/Azira/submit-jsons/azira_submit_jobs.ipynb
@@ -7,7 +7,11 @@
    "source": [
     "# Azira Bulk Dataset Submission\n",
     "\n",
-    "This notebook includes codes to automatically download a list of well-formed GeoJSON files from Azira at https://pinnacle.azira.com/.\n",
+    "This notebook includes codes to automatically submit GeoJSONs to Azira at https://pinnacle.azira.com/.\n",
+    "\n",
+    "The following reports are requested:\n",
+    "- Pin Report\n",
+    "- Expanded Common Evening, Common Daytime Location\n",
     "\n",
     "It uses the Playwright browser testing framework."
    ]
@@ -115,12 +119,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "id": "f4792acb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "download_list = []\n",
+    "submit_list = []\n",
     "\n",
     "base_dir = Path('/home/vince/Documents/SmartFires/osm_fitness')\n",
     "folders = [p for p in base_dir.iterdir() if p.is_dir()]\n",
@@ -131,9 +135,9 @@
     "for folder in folders:  \n",
     "    geojson_files = list(folder.glob('*.geojson'))\n",
     "    for json_path in geojson_files:\n",
-    "        download_list.append(json_path)  \n",
+    "        submit_list.append(json_path)  \n",
     "\n",
-    "download_list = download_list"
+    "submit_list = submit_list"
    ]
   },
   {
@@ -146,53 +150,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "id": "583011e8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Completed /home/vince/Documents/SmartFires/osm_fitness/Oklahoma_700k(20)/Alva.geojson\n",
-      "Completed /home/vince/Documents/SmartFires/osm_fitness/Oklahoma_700k(20)/Oklahoma City_2.geojson\n",
-      "/home/vince/Documents/SmartFires/osm_fitness/Oklahoma_700k(20)/Shawnee.geojson: File too large\n",
-      "Completed /home/vince/Documents/SmartFires/osm_fitness/Oklahoma_700k(20)/Shawnee_b.geojson\n",
-      "Completed /home/vince/Documents/SmartFires/osm_fitness/Oklahoma_700k(20)/Shawnee_a.geojson\n",
-      "/home/vince/Documents/SmartFires/osm_fitness/Oklahoma_700k(20)/Yukon.geojson: File too large\n",
-      "Completed /home/vince/Documents/SmartFires/osm_fitness/Oklahoma_700k(20)/Yukon_b.geojson\n",
-      "Completed /home/vince/Documents/SmartFires/osm_fitness/Oklahoma_700k(20)/Yukon_a.geojson\n",
-      "/home/vince/Documents/SmartFires/osm_fitness/Oklahoma_700k(20)/Midwest City.geojson: File too large\n",
-      "Completed /home/vince/Documents/SmartFires/osm_fitness/Oklahoma_700k(20)/Midwest City_b.geojson\n",
-      "Completed /home/vince/Documents/SmartFires/osm_fitness/Oklahoma_700k(20)/Midwest City_a.geojson\n",
-      "Completed /home/vince/Documents/SmartFires/osm_fitness/Oklahoma_700k(20)/Oklahoma City_1.geojson\n",
-      "Completed /home/vince/Documents/SmartFires/osm_fitness/Oklahoma_700k(20)/Durant.geojson\n",
-      "/home/vince/Documents/SmartFires/osm_fitness/Oklahoma_700k(20)/Norman.geojson: File too large\n",
-      "Completed /home/vince/Documents/SmartFires/osm_fitness/Oklahoma_700k(20)/Norman_b.geojson\n",
-      "Completed /home/vince/Documents/SmartFires/osm_fitness/Oklahoma_700k(20)/Norman_a.geojson\n",
-      "Completed /home/vince/Documents/SmartFires/osm_fitness/Oklahoma_700k(20)/Broken Arrow.geojson\n",
-      "/home/vince/Documents/SmartFires/osm_fitness/Oklahoma_700k(20)/Altus.geojson: File too large\n",
-      "Completed /home/vince/Documents/SmartFires/osm_fitness/Oklahoma_700k(20)/Altus_b.geojson\n",
-      "Completed /home/vince/Documents/SmartFires/osm_fitness/Oklahoma_700k(20)/Altus_a.geojson\n",
-      "Completed /home/vince/Documents/SmartFires/osm_fitness/Oklahoma_700k(20)/Tulsa_1.geojson\n",
-      "Completed /home/vince/Documents/SmartFires/osm_fitness/Oklahoma_700k(20)/Oklahoma City_3.geojson\n",
-      "/home/vince/Documents/SmartFires/osm_fitness/Oklahoma_700k(20)/Duncan.geojson: File too large\n",
-      "Completed /home/vince/Documents/SmartFires/osm_fitness/Oklahoma_700k(20)/Duncan_b.geojson\n",
-      "Completed /home/vince/Documents/SmartFires/osm_fitness/Oklahoma_700k(20)/Duncan_a.geojson\n",
-      "/home/vince/Documents/SmartFires/osm_fitness/Oklahoma_700k(20)/Ponca City.geojson: File too large\n",
-      "Completed /home/vince/Documents/SmartFires/osm_fitness/Oklahoma_700k(20)/Ponca City_b.geojson\n",
-      "Completed /home/vince/Documents/SmartFires/osm_fitness/Oklahoma_700k(20)/Ponca City_a.geojson\n",
-      "Completed /home/vince/Documents/SmartFires/osm_fitness/Oklahoma_700k(20)/Sapulpa.geojson\n",
-      "Completed /home/vince/Documents/SmartFires/osm_fitness/Oklahoma_700k(20)/Tulsa_2.geojson\n",
-      "Completed /home/vince/Documents/SmartFires/osm_fitness/Oklahoma_700k(20)/Stillwater.geojson\n",
-      "Completed /home/vince/Documents/SmartFires/osm_fitness/Oklahoma_700k(20)/Owasso.geojson\n",
-      "/home/vince/Documents/SmartFires/osm_fitness/Oklahoma_700k(20)/Lawton_1.geojson: File too large\n",
-      "Completed /home/vince/Documents/SmartFires/osm_fitness/Oklahoma_700k(20)/Lawton_1_b.geojson\n",
-      "Completed /home/vince/Documents/SmartFires/osm_fitness/Oklahoma_700k(20)/Lawton_1_a.geojson\n",
-      "Completed /home/vince/Documents/SmartFires/osm_fitness/Oklahoma_700k(20)/Tulsa_3.geojson\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# login \n",
     "browser_handle = await start_browser()\n",
@@ -202,7 +163,7 @@
     "completed = []\n",
     "failed = []\n",
     "\n",
-    "submit_stack = list(download_list)\n",
+    "submit_stack = list(submit_list)\n",
     "first = True\n",
     "\n",
     "while submit_stack:\n",
