fix download errors. update error checking in azira_submit_jobs.ipynb

--- a/Azira/submit-jsons/azira_submit_jobs.ipynb
+++ b/Azira/submit-jsons/azira_submit_jobs.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 22,
    "id": "c09aa0d7",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,8 @@
     "import json\n",
     "from pathlib import Path\n",
     "import time\n",
-    "from datetime import date, timedelta"
+    "from datetime import date, timedelta\n",
+    "import asyncio"
    ]
   },
   {
@@ -42,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 46,
    "id": "677ab463",
    "metadata": {},
    "outputs": [],
@@ -98,7 +99,34 @@
     "    part_a_path.write_text(json.dumps(json_data, indent=2))\n",
     "    part_b_path.write_text(json.dumps(json_data_copy, indent=2))\n",
     "\n",
-    "    return part_a_path, part_b_path\n"
+    "    return part_a_path, part_b_path\n",
+    "\n",
+    "async def wait_for_either_alert(page, timeout_ms=3000):\n",
+    "    # make these as specific as you can\n",
+    "    t1 = asyncio.create_task(\n",
+    "        page.wait_for_selector('text=\"Expanded access\"', timeout=timeout_ms)\n",
+    "    )\n",
+    "    t2 = asyncio.create_task(\n",
+    "        page.wait_for_selector(\n",
+    "            'div[role=\"alert\"] >> text=\"Total polygon area exceeds the maximum allowed limit\"',\n",
+    "            timeout=timeout_ms\n",
+    "        )\n",
+    "    )\n",
+    "\n",
+    "    done, pending = await asyncio.wait(\n",
+    "        {t1, t2},\n",
+    "        return_when=asyncio.FIRST_COMPLETED\n",
+    "    )\n",
+    "\n",
+    "    # cancel the loser so it doesn't keep running\n",
+    "    for p in pending:\n",
+    "        p.cancel()\n",
+    "\n",
+    "    # If the winner failed, this will raise; otherwise it returns normally.\n",
+    "    winner = done.pop()\n",
+    "    await winner\n",
+    "\n",
+    "    return \"file_too_big\"\n"
    ]
   },
   {
@@ -114,12 +142,12 @@
    "id": "c2c5c898",
    "metadata": {},
    "source": [
-    "Get list of files to submit"
+    "a. get list of files from reading GeoJSON folders"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "f4792acb",
    "metadata": {},
    "outputs": [],
@@ -138,6 +166,27 @@
     "        submit_list.append(json_path)  \n",
     "\n",
     "submit_list = submit_list"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7d92e322",
+   "metadata": {},
+   "source": [
+    "b. get list of files from text file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "04dd7b85",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "submit_list = []\n",
+    "with open(\"not_downloaded_1224.txt\", \"r\") as f:\n",
+    "    for line in f.readlines():\n",
+    "        submit_list.append(Path(line.strip()))\n"
    ]
   },
   {
@@ -162,6 +211,7 @@
     "\n",
     "completed = []\n",
     "failed = []\n",
+    "split = []\n",
     "\n",
     "submit_stack = list(submit_list)\n",
     "first = True\n",
@@ -173,8 +223,8 @@
     "        json_text = json_file.read_text() # paste the GeoJSON data\n",
     "\n",
     "        # for use on the last page before submitting the job\n",
-    "        city = json_path.stem.replace(' ', '_')\n",
-    "        state = json_path.parent.stem.split('_')[0].replace(' ', '_')\n",
+    "        city = json_path.stem.replace(' ', '_').replace('.', '_').replace('(',\"_\").replace(')',\"_\")\n",
+    "        state = \"_\".join(json_path.parent.stem.split('_')[0:-1]).replace(' ', '_') # captures \"New Hampshire\"\n",
     "        project_name = f\"{city}_{state}\"\n",
     "\n",
     "        if first:\n",
@@ -214,12 +264,17 @@
     "\n",
     "        # continue if \"file too large\"  warning appears  \n",
     "        try:\n",
-    "            await expect(page.get_by_text(\"Expanded access\")).to_be_visible(timeout=1000)\n",
+    "            await page.wait_for_selector(\n",
+    "                    'text=/Expanded access|Total polygon area exceeds/i',\n",
+    "                    timeout=3000\n",
+    "            )\n",
     "            print(f\"{json_file}: File too large\")     \n",
     "            \n",
     "            # split file and add to stack\n",
     "            for new_file in splitJson(json_path):\n",
     "                submit_stack.append(new_file)      \n",
+    "            \n",
+    "            split.append(json_path)\n",
     "\n",
     "            continue\n",
     "        except Exception as e:\n",
@@ -234,6 +289,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "e9d2bea7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "await page.pause()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "3c37af41",
    "metadata": {},
@@ -244,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "5a4211ae",
    "metadata": {},
    "outputs": [],
@@ -261,17 +326,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 31,
    "id": "4a178ae1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'2025-12-12'"
+       "'2025-12-17'"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 52,
    "id": "48a4c034",
    "metadata": {},
    "outputs": [],
@@ -321,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 53,
    "id": "095fb178",
    "metadata": {},
    "outputs": [
@@ -331,7 +396,7 @@
        "<Response url='https://pinnacle.azira.com/' request=<Request url='https://pinnacle.azira.com/' method='GET'>>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 54,
    "id": "34ea8e20",
    "metadata": {},
    "outputs": [],
@@ -370,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 55,
    "id": "763cacdd",
    "metadata": {},
    "outputs": [],
@@ -388,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 56,
    "id": "19577034",
    "metadata": {},
    "outputs": [],
@@ -406,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 57,
    "id": "a6aa6c1a",
    "metadata": {},
    "outputs": [],
@@ -415,7 +480,7 @@
     "await page.get_by_role(\"heading\", name=\"GeoJSON/KML/ESRI\").click()\n",
     "\n",
     "# paste the GeoJSON data\n",
-    "json_path = Path('/home/vince/Documents/SmartFires/osm_fitness/New_Mexico_700k(15)/Roswell.geojson')\n",
+    "json_path = Path('/home/vince/Documents/SmartFires/osm_fitness/Nevada_700k(12)/Henderson_1.geojson')\n",
     "json_text = json_path.read_text()\n",
     "\n",
     "await page.get_by_role(\"textbox\", name=\"Enter GeoJSON\").fill(json_text)\n",
@@ -433,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 58,
    "id": "af367dd2",
    "metadata": {},
    "outputs": [],
@@ -454,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "id": "26396b19",
    "metadata": {},
    "outputs": [],
@@ -474,33 +539,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 60,
    "id": "62d743d1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "city = json_path.stem\n",
-    "state = json_path.parent.stem.split('_')[0]\n",
-    "name = f\"{city}_{state}\"\n",
+    "# for use on the last page before submitting the job\n",
+    "city = json_path.stem.replace(' ', '_').replace('.', '_').replace('(',\"_\").replace(')',\"_\")\n",
+    "state = \"_\".join(json_path.parent.stem.split('_')[0:-1]).replace(' ', '_') # captures \"New Hampshire\"\n",
+    "project_name = f\"{city}_{state}\"\n",
     "\n",
-    "await page.get_by_role(\"textbox\", name=\"Name is required\").fill(name)\n",
-    "\n"
+    "await page.get_by_role(\"textbox\", name=\"Name is required\").fill(project_name)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7a68424c",
+   "execution_count": 61,
+   "id": "c0f1b045",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n"
+    "await page.get_by_role(\"button\", name=\"Submit\").first.click()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 41,
    "id": "eacbbeba",
    "metadata": {},
    "outputs": [
@@ -515,7 +579,10 @@
    "source": [
     "try:\n",
     "    await page.get_by_role(\"button\", name=\"Submit\").first.click()\n",
-    "    await expect(page.get_by_text(\"Expanded access\")).to_be_visible(timeout=1000)\n",
+    "    await page.wait_for_selector(\n",
+    "                    'text=/Expanded access|Total polygon area exceeds the maximum allowed limit/i',\n",
+    "                    timeout=2000\n",
+    "            )\n",
     "    print(\"popup\")\n",
     "except Exception as e:\n",
     "    print(\"no popup\")"
@@ -531,10 +598,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 42,
    "id": "f27fe686",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Future exception was never retrieved\n",
+      "future: <Future finished exception=Exception('Connection closed while reading from the driver')>\n",
+      "Exception: Connection closed while reading from the driver\n",
+      "Future exception was never retrieved\n",
+      "future: <Future finished exception=Exception('Connection closed while reading from the driver')>\n",
+      "Exception: Connection closed while reading from the driver\n",
+      "Future exception was never retrieved\n",
+      "future: <Future finished exception=Exception('Connection closed while reading from the driver')>\n",
+      "Exception: Connection closed while reading from the driver\n",
+      "Future exception was never retrieved\n",
+      "future: <Future finished exception=Exception('Connection closed while reading from the driver')>\n",
+      "Exception: Connection closed while reading from the driver\n"
+     ]
+    }
+   ],
    "source": [
     "await page.pause()"
    ]
@@ -586,11 +672,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "3977f9c3",
    "metadata": {},
    "outputs": [],
    "source": [
+    "for p in not_do\n",
     "splitJson(test_path)"
    ]
   }
